@@ -9,23 +9,20 @@ import org.springframework.graphql.execution.DataFetcherExceptionResolver;
 import org.springframework.stereotype.Component;
 import reactor.core.publisher.Mono;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 @Component
 public class GraphQLExceptionHandler implements DataFetcherExceptionResolver {
 
-
     @Override
-    public @NotNull Mono<List<GraphQLError>> resolveException(@NotNull Throwable ex, @NotNull DataFetchingEnvironment env) {
+    public @NotNull Mono<List<GraphQLError>> resolveException(@NotNull Throwable ex,
+            @NotNull DataFetchingEnvironment env) {
         if (ex instanceof ConstraintViolationException validationEx) {
             List<GraphQLError> errors = validationEx.getConstraintViolations().stream()
                     .map(violation -> GraphqlErrorBuilder.newError(env)
                             .message("Błąd walidacji: " + violation.getMessage())
                             .build())
-                    .collect(Collectors.toList());
+                    .toList();
             return Mono.just(errors);
         }
         GraphQLError error = GraphqlErrorBuilder.newError(env)
